@@ -31,10 +31,12 @@ several languages.
     | Finnish    | fi       | ISO-8859-1       | UTF-8          |
     | French     | fr       | ISO-8859-1       | UTF-8          |
     | German     | de       | ISO-8859-1       | UTF-8          |
-    | Hungarian  | hu       | ISO-8859-1       | UTF-8          |
+    | Hungarian  | hu       | ISO-8859-2       | UTF-8          |
+    | Indonesian | id       | ISO-8859-1       | UTF-8          |
     | Italian    | it       | ISO-8859-1       | UTF-8          |
     | Norwegian  | no       | ISO-8859-1       | UTF-8          |
     | Portuguese | pt       | ISO-8859-1       | UTF-8          |
+    | Romanian   | ro       | ISO-8859-2       | UTF-8          |
     | Spanish    | es       | ISO-8859-1       | UTF-8          |
     | Swedish    | sv       | ISO-8859-1       | UTF-8          |
     | Russian    | ru       | KOI8-R           | UTF-8          |
